# futures-trend

./: .gitignore  Makefile  README.md  SES.py  algo.py  helpers.py  pyproject.toml
.github/workflows/: ephermeral-daily-run.yml
backtests/analysis/: futures-ma-loopback-gridsearch.ipynb  long_short_trend_gridsearch.ipynb
backtests/strategy/: long_short_trend.ipynb
data/: CL.csv
docker/: Dockerfile.worker  docker-compose.ci.yml
infra/do-functions/: .env.example  project.yml
scheduler/: run.sh
services/: spaces_file_sync.py  stooq.py
